--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -15,8 +15,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "aaf55d20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ValueFunction(torch.nn.Module):\n",
+    "    def __init__(self, in_dim:int, hidden_dim:int, out_dim:int):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.ffnn = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(in_dim,hidden_dim),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Linear(hidden_dim,out_dim),\n",
+    "        )\n",
+    "\n",
+    "    def get_value(self,state):\n",
+    "        logits = self.ffnn(state)\n",
+    "        return logits\n",
+    "\n",
+    "    def loss_fn(self,batch_states,batch_rtgs):\n",
+    "        preds = self.ffnn(batch_states)\n",
+    "        print(preds.shape)\n",
+    "        print(preds)\n",
+    "        preds = preds.squeeze(-1)\n",
+    "        print(preds.shape)\n",
+    "        print(preds)\n",
+    "        return torch.nn.functional.mse_loss(preds,batch_rtgs)\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "df46e11f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_headless = gym.make('CartPole-v1')\n",
+    "env = env_headless\n",
+    "\n",
+    "in_dim = env.observation_space.shape[0] # (4,)\n",
+    "out_dim = env.action_space.n # (2,)\n",
+    "hidden_dim = 32\n",
+    "value_fn = ValueFunction(in_dim,hidden_dim,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4f80c17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 1])\n",
+      "tensor([[-0.3479],\n",
+      "        [-0.3479],\n",
+      "        [-0.3479]], grad_fn=<AddmmBackward0>)\n",
+      "torch.Size([3])\n",
+      "tensor([-0.3479, -0.3479, -0.3479], grad_fn=<SqueezeBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "state,info = env.reset()\n",
+    "sl = state.tolist()\n",
+    "a = [sl]*3\n",
+    "loss = value_fn.loss_fn(torch.as_tensor(a,dtype=torch.float32),torch.as_tensor([2,1,3],dtype=torch.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "78029db1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.179257869720459"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402bba7d",
    "metadata": {},
    "outputs": [],
    "source": []
