--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "aaf55d20",
    "metadata": {},
    "outputs": [],
@@ -63,49 +63,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "4f80c17f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 1])\n",
-      "tensor([[-0.3479],\n",
-      "        [-0.3479],\n",
-      "        [-0.3479]], grad_fn=<AddmmBackward0>)\n",
-      "torch.Size([3])\n",
-      "tensor([-0.3479, -0.3479, -0.3479], grad_fn=<SqueezeBackward1>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state,info = env.reset()\n",
     "sl = state.tolist()\n",
     "a = [sl]*3\n",
-    "loss = value_fn.loss_fn(torch.as_tensor(a,dtype=torch.float32),torch.as_tensor([2,1,3],dtype=torch.float32))"
+    "predicted_values = value_fn.get_value(torch.as_tensor(a,dtype=torch.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "78029db1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.179257869720459"
+       "torch.Size([3, 1])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss.item()"
+    "predicted_values.shape"
    ]
   },
   {
