reinforce w/ adv weights

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -97,8 +97,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "402bba7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1])\n",
+      "tensor(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "aten = torch.tensor([1])\n",
+    "print(aten)\n",
+    "aten = aten.squeeze(-1)\n",
+    "print(aten)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "742d6a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2, 1, 2])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([3,2,3]) - torch.tensor([1,1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "fb6474e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3e-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "5b2fe53d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1e-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "5bfbbf89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = torch.tensor([1,2,3],dtype=torch.float32)\n",
+    "preds = torch.tensor([1,2,3],dtype=torch.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "139d2cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if torch.var(targets)<1e-8:\n",
+    "            ev = 0\n",
+    "else:\n",
+    "    ev = 1 - (torch.var(targets-preds)/torch.var(targets))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "fa47fd11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ev.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28ff4252",
    "metadata": {},
    "outputs": [],
    "source": []
