good reinforce w/ gae run

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -224,8 +224,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "28ff4252",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls = 0.0\n",
+    "aten = torch.tensor(ls)\n",
+    "print(aten.shape)\n",
+    "a = aten.unsqueeze(0)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "b913311e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = torch.tensor([1,2,3])\n",
+    "t2 = torch.tensor([4,5,6])\n",
+    "t = torch.cat((t1,t2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "cac2baf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77d73483",
    "metadata": {},
    "outputs": [],
    "source": []
